# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/es2abc_config.gni")
import("//build/ohos.gni")
import("//build/config/clang/clang.gni")

es2abc_gen_abc("gen_decimal_abc") {
  src_js = rebase_path("decimal.mjs")
  dst_file = rebase_path(target_out_dir + "/decimal.abc")
  in_puts = [ "decimal.mjs" ]
  out_puts = [ target_out_dir + "/decimal.abc" ]
  extra_args = [ "--module" ]
}

gen_js_obj("decimal_abc") {
  input = get_label_info(":gen_decimal_abc", "target_out_dir") + "/decimal.abc"
  output = target_out_dir + "/decimal_abc.o"
  dep = ":gen_decimal_abc"
}

gen_js_obj("decimal_mjs") {
  input = rebase_path("decimal.mjs")
  output = target_out_dir + "/decimal_mjs.o"
}

ohos_shared_library("decimal") {
  sources = [ "decimal.cpp" ]

  deps = [
    ":decimal_abc",
    ":decimal_mjs",
  ]

  external_deps = [ "napi:ace_napi" ]

  license_file = "./LICENCE.md"
  relative_install_dir = "module/arkts/math"
  part_name = "decimal.js"
  subsystem_name = "thirdparty"
}

is_ohos_standard_system = is_standard_system && !is_arkui_x
if (is_ohos_standard_system && product_name == "ohos-sdk") {
  ohos_copy("copy_previewer_debug_arkts") {
    public_deps = [ ":gen_decimal_abc" ]
    abc_out_dir = get_label_info(":gen_decimal_abc", "target_out_dir")
    sources = [ "${abc_out_dir}/decimal.abc" ]
    outputs = [ target_out_dir + "/previewer/common/bin/module/arkts/math/{{source_file_part}}" ]
    module_source_dir = target_out_dir + "/previewer/common/bin/module/arkts/math/"
    module_install_name = ""
  }
}
